# timeseries

./: Cargo.toml  README.md
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.PartialEq.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/iter/traits/iterator/: trait.Iterator.js
docs/implementors/core/marker/: trait.Send.js  trait.Sync.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/implementors/timeseries/: trait.Datelike.js
docs/src/timeseries/: chrono_structs.rs.html  enums.rs.html  error.rs.html  errors.rs.html  lib.rs.html  macros.rs.html  ndarray_structs.rs.html  structs.rs.html  traits.rs.html  utils.rs.html
docs/timeseries/: all.html  fn.read_csv_to_datetable.html  index.html  macro.dt.html  macro.map.html  macro.s.html  macro.vec2!.html  macro.vec2.html  sidebar-items.js  struct.DateTime.html  struct.FixedOffset.html  struct.IterRows.html  struct.NdTable.html  struct.Row.html  struct.Table.html  struct.TableError.html  struct.TableReadError.html  trait.BtreeMapTrait.html  trait.Datelike.html  trait.TableMetaTrait.html  trait.TableTrait.html  type.DateTable.html
docs/timeseries/chrono_structs/: type.DateTable.html
docs/timeseries/enums/: enum.IndexOrColumn.html  index.html  sidebar-items.js
docs/timeseries/errors/: struct.TableError.html  struct.TableReadError.html
docs/timeseries/ndarray_structs/: struct.DateTime.html  struct.FixedOffset.html  struct.NdTable.html  trait.Datelike.html
docs/timeseries/structs/: struct.IterRows.html  struct.Row.html  struct.Table.html
docs/timeseries/traits/: trait.BtreeMapTrait.html  trait.TableMetaTrait.html  trait.TableTrait.html
docs/timeseries/utils/: fn.read_csv_to_datetable.html
examples/: array.rs  data.rs  postgresql_example.rs  redis_example.rs  sqlite_example.rs  unqlite_example.rs
src/: chrono_structs.rs  db_structs.rs  enums.rs  error.rs  errors.rs  lib.rs  macros.rs  ndarray_structs.rs  postgresql_structs.rs  redis_structs.rs  sqlite_structs.rs  structs.rs  tests.rs  traits.rs  unqlite_structs.rs  utils.rs
tests/: unqlite_test.rs
