[package]
name = "timeseries"
version = "0.1.0"
authors = ["thomas9911 <thomastimmer11@hotmail.com>"]
edition = "2018"


[features]
serialize = ["serde", "serde_test"]
num  = ["num-traits"]

[dependencies]

[dependencies.chrono]
version = "*"
optional = true
[dependencies.csv]
version = "*"
optional = true
[dependencies.ndarray]
version = "*"
optional = true
[dependencies.num-traits]
version = "*"
optional = true
[dependencies.rayon]
version = "*"
optional = true
[dependencies.serde]
version = "^1"
features = ["derive"]
optional = true
[dependencies.serde_test]
version = "^1"
optional = true
[dependencies.unqlite]
version = "*"
optional = true
[dependencies.bincode]
version = "*"
optional = true
[dependencies.seahash]
version = "*"
optional = true

[dev-dependencies]
tempfile = "*"

[[example]]
name = "data"
required-features = ["csv", "chrono"]

[[example]]
name = "array"
required-features = ["chrono"]
