[package]
name = "timeseries"
version = "0.1.0"
authors = ["thomas9911 <thomastimmer11@hotmail.com>"]
edition = "2018"


[features]
serialize = ["serde", "serde_test"]
num  = ["num-traits"]
unqlite_db = ["unqlite", "_db_base"]
postgresql_db = ["postgres", "_db_base"]
_db_base = ["bincode", "serde", "seahash"]

[dependencies]

[dependencies.chrono]
version = "*"
optional = true
[dependencies.csv]
version = "*"
optional = true
[dependencies.postgres]
version = "0.15"
optional = true
[dependencies.ndarray]
version = "*"
optional = true
[dependencies.num-traits]
version = "*"
optional = true
[dependencies.rayon]
version = "*"
optional = true
[dependencies.serde]
version = "^1"
features = ["derive"]
optional = true
[dependencies.serde_test]
version = "^1"
optional = true
[dependencies.unqlite]
version = "*"
optional = true
[dependencies.bincode]
version = "*"
optional = true
[dependencies.seahash]
version = "*"
optional = true

[dev-dependencies]
tempfile = "*"

[[example]]
name = "data"
required-features = ["csv", "chrono"]

[[example]]
name = "array"
required-features = ["chrono"]

[[example]]
name = "unqlite_example"
required-features = ["unqlite_db"]

[[example]]
name = "postgresql_example"
required-features = ["postgresql_db"]