[package]
name = "timeseries"
version = "0.1.0"
authors = ["thomas9911 <thomastimmer11@hotmail.com>"]
edition = "2018"


[features]
serialize = ["serde", "serde_test"]
num  = ["num-traits"]
unqlite_db = ["unqlite", "_db_base"]
postgresql_db = ["postgres", "_db_base"]
sqlite_db = ["rusqlite", "_db_base"]
redis_db = ["redis", "_db_base"]
_db_base = ["bincode", "serde", "seahash"]

[dependencies]

[dependencies.chrono]
version = "0.4"
optional = true
[dependencies.csv]
version = "1.1"
optional = true
[dependencies.postgres]
version = "0.19"
optional = true
[dependencies.ndarray]
version = "0.15"
optional = true
[dependencies.num-traits]
version = "0.2"
optional = true
[dependencies.rayon]
version = "1.5"
optional = true
[dependencies.serde]
version = "^1"
features = ["derive"]
optional = true
[dependencies.serde_test]
version = "^1"
optional = true
[dependencies.unqlite]
version = "1.5"
optional = true
[dependencies.rusqlite]
version = "0.27"
optional = true
features = ["bundled"]
[dependencies.redis]
version = "0.21"
optional = true
[dependencies.bincode]
version = "1.3"
optional = true
[dependencies.seahash]
version = "4.1"
optional = true

[dev-dependencies]
tempfile = "*"

[[example]]
name = "data"
required-features = ["csv", "chrono"]

[[example]]
name = "array"
required-features = ["chrono"]

[[example]]
name = "unqlite_example"
required-features = ["unqlite_db"]

[[example]]
name = "postgresql_example"
required-features = ["postgresql_db"]

[[example]]
name = "sqlite_example"
required-features = ["sqlite_db"]

[[example]]
name = "redis_example"
required-features = ["redis_db"]
